share/gps.css
/*
 * Custom styling for GPS.
 */

/* You can override the default theme colors. Most gtk+ themes are
 * carefully setup so that they do not hard-code colors, but use a number
 * of predefined named colors and shades of them. For instance:
 */
/*
   @define-color base_color black;
   @define-color bg_color #fff;
   @define-color theme_bg_color green;
*/

@define-color theme_base_color @editor_bg_color;

@define-color inactive_items_color mix(@theme_base_color, @theme_fg_color, 0.55);
@define-color inactive_items_selected_color mix(@theme_selected_bg_color, @theme_selected_fg_color, 0.7);

@define-color error-color mix(@theme_base_color, red, 0.5);
@define-color warning-color mix(@theme_base_color, darkorange, 0.9);

@define-color entry_color_two @editor_bg_color;

@define-color button_bg_color @editor_bg_color;

@define-color gutter_color mix(@editor_fg_color, @editor_bg_color, 0.6);


/*********************
 * General
 *********************/

* {
   /* Reduce the size of the scroll arrows in notebooks */
   -GtkWidget-scroll-arrow-hlength: 8;
   -GtkWidget-scroll-arrow-vlength: 8;
   -GtkNotebook-arrow-spacing: 0;
   icon-shadow: none;
   text-shadow: none;
   box-shadow: none;
}

.view, .menu, column-header .button, GtkListBox, GtkFlowBox {
   background-color: @theme_base_color;
}

.mdi, GtkTextView.view {
   background-color: @editor_bg_color;
}

/*********************
 * Entries
 *********************/

.entry, .entry.multiline GtkTextView.view {
   background-image: -gtk-gradient (linear,
                                   0 0, 0 0.5,
                                   from(@entry_color_one),
                                   to(@entry_color_two));
   border-color: @popup_border_color;
}

/*********************
 * Buttons and Combos
 *********************/

.button
{
   background-image: -gtk-gradient (linear,
                                   0 0, 0 0.5,
                                   from(@active_button_bg_color_two),
                                   to(@active_button_bg_color_one));
   border-width: 1px;
   border-color: @popup_border_color;
}

.gps-welcome-dialog .list-row.button, GtkTreeView > .button {
  background: transparent;
}

.button.flat
 {
   background: transparent;
   background-image: none;
   border-radius: 2px;
   border-width: 1px;
   border-color: transparent;
}

.toolbar .button {
  padding: 4px;
}

.button:link:hover {
   color: @theme_selected_bg_color;
}

.button:active, .button:checked {
   background-image: -gtk-gradient (linear,
                                   0 0, 0 0.5,
                                   from(@active_button_bg_color_one),
                                   to(@active_button_bg_color_two));
   border-color: @popup_border_color;
}

/*********************
 * Task Manager
 *********************/

.gps-task-manager GtkProgressBar {
   -GtkProgressBar-min-horizontal-bar-height: 1;
}

/*************
 * Dialogs   *
 *************/

GtkDialog > GtkBox {
   background-color: @theme_base_color;
}

GtkDialog {
   -GtkDialog-content-area-border: 0px;
   -GtkDialog-content-area-spacing: 0px;
   -GtkDialog-action-area-border: 3px;
   border-width: 0px;
}

.dialog-action-box, .dialog .buttonbox {
   background-color: @notebook_background;
   border-width: 0px;
   padding: 3px;
}

/***************
 * Info Popups *
 ***************/

.gps-info-popup GtkLabel {
   font-size: large;
}

/*************
 * Menubar   *
 *************/

.menubar {
   box-shadow: none;
}

/*************
 * GUI Utils *
 *************/

.warning-label {
   color: @warning-color;
   font-style: italic;
}

.help-label {
   color: @inactive_items_color;
   font-size: x-large;
}

/********************
 * GPS dialog views *
 ********************/

.dialog-views {
   background-color: @theme_base_color;
}

/**************************
 * GPS dialog view groups *
 **************************/

.dialog-views-groups {
   box-shadow: none;
   border-width: 0;
}

.dialog-views-groups > GtkLabel {
   /* Set bold font for group titles */
   font-weight: bold;
   padding-top: 12px;
   padding-bottom: 5px;
}

.dialog-views-groups-rows {
   padding-left: 12px;
   padding-right: 12px;
}

.dialog-views-groups-rows.display_error, GtkInfoBar.display_error {
   background-color: @error-color;
}

.dialog-views-groups-rows GtkRadioButton > GtkLabel {
   padding-right: 12px;
}

.dialog-views-doc-labels {
   /* Reduce the font size for the inlined preferences documentation */
   font-size: x-small;
   color: @inactive_items_color;
   padding-top: 4px;
}

*:selected .dialog-views-doc-labels {
   /* Reduce the font size for the inlined preferences documentation */
   font-size: x-small;
   color: @inactive_items_selected_color;
}

.dialog-views-button-boxes {
   -GtkButtonBox-child-min-width: 0;
   -GtkButtonBox-child-min-height: 0;
   -GtkButtonBox-child-internal-pad-y: 0;
   -GtkButtonBox-child-internal-pad-x: 0;
}

.dialog-views-groups.with-message {
   padding-top: 12px;
   padding-bottom: 12px;
}

/*********************
 * GPS Learn View    *
 *********************/

.learn-groups {
   padding-left: 10px;
   padding-right: 10px;
}

.learn-groups > GtkLabel {
   font-weight: normal;
   color: @inactive_items_color;
   padding-top: 10px;
   padding-bottom: 10px;
}

.learn-provider-labels {
   font-weight: bold;
}

.learn-items {
   background-color: @learn-items-color;
   padding-left: 10px;
}

.learn-help .dialog-views-groups {
  padding-top: 16px;
}

/************************
 * GPS Scenario View    *
 ************************/

.scenario-variables-view .action-box GtkButton {
    padding-left: 24px;
    padding-right: 24px;
}

.scenario-variables-view .dialog-views-groups {
   padding-top: 6px;
}

/**************************
 * GPS Assistant Pages    *
 **************************/

.assistant-page-views > GtkViewport > GtkBox > .dialog-views-groups > GtkLabel {
   /* Set extra large font for assistant pages titles */
   font-weight: normal;
   font-size: x-large;
   padding-bottom: 5px;
}
/* ... */

